2005-06-28	Tim Perdue	<tim@gforge.org>

	* Added a customizable template file for Group->approve() function
	which means the number of trackers, fields, and elements in each 
	tracker can be modified more easily

2005-06-29	Marcelo Mottalli	<marcelo@gforgegroup.com>

	* Added the extra field alias to the field cloning procedue

2005-06-28	Marcelo Mottalli	<marcelo@gforgegroup.com>

	* Changed the handling of extra fields aliases. Now, when no alias
		is specified, it automatically generates one, and when there's a 
		conflict with aliases a new alias is also generated automatically.

2005-06-28	Tim Perdue	<tim@gforge.org>

	* Added a sys_template_group var
	* Added tracking cloning to copy all fields from any tracker in template group
	* Better navigation in tracker admin

2005-06-22	Vittal Aithal	<gforge@aithal.org>

	* www/include/pre.php and common/include/session.php changed how to
	determine if the session is SSL'd.
	* [#1343] Fix link in FRS notification email. A minor formatting fix,
	and the email now generates https URLs when sys_use_ssl is on.

2005-06-17	Marcelo Mottalli	<marcelo@gforgegroup.com>

	* Fixed bugs in the SOAP interface
	* Added the option of specifying aliases for the extra fields in an artifact

2005-06-06	Vittal Aithal	<gforge@aithal.org>

	* [#1279] Fix to cross-site-scripting off project registration page
	and login page.

2005-05-27  Tom Copeland  <tom@infoether.com>

	* www/admin/groupedit.php: Applied patch 1296 'Patch to not update SCM
	in groupedit if this group don't use SCM' from Vincent Ruiz.

2005-05-27  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* www/tracker/admin/updates.php: addslashes() before using string
	in SQL.

2005-05-20	Marcelo Mottalli <marcelo@gforgegroup.com>

	* Enabled option for sending a message to the administrators when 
	requesting joining to a project

2005-05-20  Tom Copeland  <tom@infoether.com>

	* common/frs/FRSFile: Small cleanup to error msg.

2005-05-19  Tom Copeland  <tom@infoether.com>
